--- a/css/site1/css/styles.css
+++ b/css/site1/css/styles.css
@@ -26,7 +26,7 @@ head{
     
     /* Estilos para o cabeçalho fixo */
     header {
-        background-color: #004080;
+        background-color: #079030;
         color: #fff;
         padding: 15px 0;
         text-align: center;
@@ -76,7 +76,7 @@ header img {
         top: 10px;
         right: 0;
         width: 100%;
-        background-color: #006b80;
+        background-color: #15c33b;
         border-radius: 0 0 15px 15px;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     }
@@ -114,7 +114,7 @@ nav ul li a {
     text-decoration: none;
     padding: 5px 15px;
     border-radius: 15px; /* Bordas arredondadas */
-    background-color: #002680; /* Azul forte */
+    background-color: #017223; /* Azul forte */
     color: #fff;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
     border: #000000;
@@ -122,7 +122,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: #0050A0; /* Tom mais claro do Azul forte */
+    background-color: #046e14; /* Tom mais claro do Azul forte */
     color: #fff;
 }
 
@@ -140,7 +140,7 @@ nav ul li a:hover {
 .sidebar {
     flex: 1;
     padding: 20px;
-    background-color: #004080; /* Azul forte */
+    background-color: #017223; /* Azul forte */
     color: #fff;
     border-radius: 15px; /* Bordas arredondadas */
     margin-right: 50px; /* Afasta o quadro de avisos */
@@ -163,7 +163,7 @@ nav ul li a:hover {
 }
 
 .notice-item:hover {
-    background-color: #2A6880; /* Tom mais claro do Azul marinho */
+    background-color: #07bc49; /* Tom mais claro do Azul marinho */
 }
 
 .content {
@@ -181,7 +181,7 @@ nav ul li a:hover {
 footer {
     text-align: center;
     padding: 0,01cm 0;
-    background-color: #004080; /* Azul forte */
+    background-color: #079030; /* Azul forte */
     color: #fff;
     position: fixed;
     bottom: 0;
